--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,7 +7,7 @@
     "**/.DS_Store": true,
     "typeorm": true,
     "node_modules": true,
-    "*.js": true,
-    "*.d.ts": true
+    // "*.js": true,
+    // "*.d.ts": true
   }
 }
